--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -36,7 +36,7 @@
         <meta name="Distribution"                   content="Global"/>
 
         <meta property="og:title" content="@pageInfo.title | @Config.siteTitle"/>
-        <meta property="og:og:description" content="@pageInfo.description"/>
+        <meta property="og:description" content="@pageInfo.description"/>
         <meta property="og:image" content="@pageInfo.image"/>
         <meta property="og:url" content="@(Config.membershipUrl + pageInfo.url)"/>
 
