--- a/frontend/assets/stylesheets/nav/_nav.scss
+++ b/frontend/assets/stylesheets/nav/_nav.scss
@@ -13,10 +13,14 @@
 .nav {
     list-style: none;
     margin: 0;
+    padding: 0;
     z-index: 100; //To ensure it sits above anything else
-    @include rem((
-        padding: ($gs-baseline/3)*2 0 $gs-baseline/3
-    ));
+
+    @include mq(tablet) {
+        @include rem((
+            padding: ($gs-baseline/3)*2 0 $gs-baseline/3
+        ));
+    }
 
     .nav__item--full {
         width: 100%;
@@ -147,9 +151,9 @@
    ========================================================================== */
 
 .nav--columns {
-    @include rem((
-        padding: 0 $gs-gutter/2
-    ));
+    // @include rem((
+    //     padding: 0 $gs-gutter/2
+    // ));
     @include mq(mobileLandscape) {
         @include rem((
             padding-left: $gs-gutter,
@@ -160,52 +164,51 @@
         float: left;
         width: 50%;
         @include box-sizing(border-box);
-        @include rem((
-            padding-right: $gs-gutter/2
-        ));
+        border-right: 1px solid #6dcfe3;
+
+        @include mq(tablet) {
+            border-right: 0;
+        }
 
         &:nth-child(odd) {
             clear: left;
         }
         &:nth-child(even) {
             padding-right: 0;
-            @include rem((
-                padding-left: $gs-gutter/2
-            ));
+            border-right: 0;
         }
     }
 
     .nav__link {
+        border-top: 1px solid #6dcfe3;
         display: block;
         @include rem((
-            padding: $gs-baseline 0
+            padding: $gs-baseline/2 0 $gs-baseline $gs-baseline
         ));
-        border-bottom: 1px solid lighten($c-neutral4, 8%);
         height: auto;
         background-color: transparent;
         @include fs-header(1);
         -webkit-font-smoothing: subpixel-antialiased;
         text-decoration: none;
 
+        @include mq(tablet) {
+            border-top: 0;
+        }
+
         &:link,
         &:visited {
-            color: $c-neutral1;
+            color: $black;
         }
         &:hover,
         &:focus {
             text-decoration: underline;
-            // color: $c-brandLightBlue;
         }
 
         &:active {
+            color: $white;
             text-decoration: none;
         }
     }
-}
-
-.nav--top-border-off > .nav__item:nth-child(-n+2) .nav__link {
-    border-top: 0;
-    padding-top: 0;
 }
 
 .nav--services {
@@ -220,9 +223,7 @@
     right: 0;
     background-color: lighten($black, 20%);
     z-index: 3;
-    @include rem((
-        top: 47px
-    ));
+    top: 42px;
 
     a.mobile-menu__button {
         color: $white;
@@ -233,5 +234,30 @@
             box-shadow: -3px 0px 4px 0px rgba(50, 50, 50, .30)
         ));
     }
+
+    .mobile-menu__button i {
+        width: 20px;
+        display: block;
+        border-top: 2px solid rgba(255, 255, 255, .9);
+        margin-top: 3px;
+        @include transform-origin(60%);
+        -webkit-transition: opacity .1s, -webkit-transform .1s ease-in;
+        transition: opacity .1s, transform .1s ease-in;
+    }
+
+    .close-icon-white--active i {
+        @include transform-origin(43%);
+
+        &:nth-child(1) {
+            @include transform(translateY(rem(4px)) rotate(45deg));
+        }
+        &:nth-child(2) {
+            opacity: 0;
+        }
+        &:nth-child(3) {
+            @include transform(translateY(rem(-4px)) rotate(-45deg));
+        }
+    }
+
 }
 
