--- a/frontend/assets/stylesheets/nav/_pop-up.scss
+++ b/frontend/assets/stylesheets/nav/_pop-up.scss
@@ -61,7 +61,7 @@
 
 .nav-popup--small {
     @include rem((
-        padding-top: 54px,
+        padding-top: 36px,
         padding-bottom: $gs-baseline,
         top: $mobilePopupOffset,
         min-height: 47px
@@ -77,7 +77,7 @@
             width: gs-span(4) + $gs-gutter * 2
         ));
         @include box-sizing(border-box);
-        background-color: #ffffff;
+        background-color: $white;
         border: 1px solid $c-neutral4;
 
         .nav--additional-sections > .nav__item {
@@ -107,6 +107,10 @@
    ========================================================================== */
 
 .nav-popup--profile {
+    padding-top: 0;
+    padding-bottom: 0;
+    z-index: 4;
+
     @include mq(tablet) {
         left: 30px;
         @include rem((
@@ -130,11 +134,13 @@
             float: none;
             width: auto;
             display: block;
-            @include rem((
-                padding-left: $gs-gutter/2,
-                padding-right: $gs-gutter/2
-            ));
             @include mq(mobileLandscape) {
+                @include rem((
+                    padding-left: $gs-gutter/2,
+                    padding-right: $gs-gutter/2
+                ));
+            }
+            @include mq(tablet) {
                 @include rem((
                     padding-left: $gs-gutter,
                     padding-right: $gs-gutter
@@ -142,9 +148,9 @@
             }
 
             &:first-child .nav__link {
-                border-top: 0;
-                padding-top: 0;
+                
                 @include mq(tablet) {
+                    border-top: 0;
                     @include rem((
                         padding-top: 10px
                     ));
