fix IE issues and start of beta logo

--- a/frontend/app/views/fragments/header.scala.html
+++ b/frontend/app/views/fragments/header.scala.html
@@ -46,7 +46,12 @@
                 <span itemscope itemtype="http://schema.org/Organization">
                     <a href="/" itemprop="url" class="icon-wrapper">
                         <span class="u-h" itemprop="name">@Config.siteTitle</span>
-                        <i class="icon-sprite icon-sprite-logo-beta"></i>
+                        <svg width="100%" height="100%" viewBox="0 17 100 10"
+                             xmlns="http://www.w3.org/2000/svg" 
+                             xmlns:xlink="http://www.w3.org/1999/xlink">            
+                          <image xlink:href="/assets/dist/images/membership_masthead.a10d862d.svg" src="/assets/dist/images/membership_masthead.a10d862d.svg" x="0" y="0" height="45" width="100" />    
+                        </svg>
+                        <!-- <i class="icon-sprite icon-sprite-logo-beta icon-sprite-logo-beta--resize"></i> -->
                     </a>
                 </span>
             </div>
