--- a/frontend/assets/stylesheets/layout/_header.scss
+++ b/frontend/assets/stylesheets/layout/_header.scss
@@ -24,63 +24,96 @@ $header-margin: 36px;
         }
     }
     .header__primary {
-        @include rem((
-            margin-left: $header-padding
-        ));
-        @include mq(mobile) {
-            margin-left: $header-padding/2;
-        }
         float: left;
-    }
-    .header__secondary {
         @include rem((
-            margin-right: $header-padding
+            margin-left: $header-padding/2
         ));
-        @include mq(mobile) {
-            margin-right: $header-padding/2;
-        }
+    }
+
+    .header__secondary {
         float: right;
-        width: 200px;
-        i {
-            background-size: 200px;
-            @include mq(mobile) {
-                background-size: 245px;
-                height: 35px;
-            }
-
-            @include mq(tablet) {
-                height: 40px;
-            }
-
-            @include mq(desktop) {
-                height: 60px;
-            }
-        }
+        width: auto;
+        @include rem((
+            margin-right: $header-padding/2
+        ));
 
         @include mq(mobile) {
-            width: 245px;
-        }
-
-        @include mq(mobileLandscape) {
-            width: 320px;
-            i {
-                background-size: 320px;
-            }
-        }
-
-        @include mq(desktop) {
-            width: auto;
-            i {
-                background-size: auto;
-            }
+            @include rem((
+                margin-right: $header-padding/2
+            ));
         }
     }
+
     .header__menu {
         display: none;
     }
 
     .header__logo {
         clear: right;
+        width: 64%;
+        float: right;
+        @include rem((
+            margin-right: $header-padding/2,
+            height: 25px
+        ));
+
+        @include mq(mobile) {
+            width: 75%;
+            @include rem((
+                margin-right: $header-padding/2
+            ));
+        }
+
+        @include mq($from: mobileLandscape) {
+            width: 50%;
+            @include rem((
+                height: 40px
+            ));
+        }
+
+        @include mq(tablet) {
+            @include rem((
+                margin-bottom: $gs-gutter
+            ));
+        }
+
+        @include mq(desktop) {
+            width: 44%;
+            @include rem((
+                height: 50px
+            ));
+        }
+
+        &:after {
+            content: 'beta';
+            position: relative;
+            background-color: #fdba3b;
+            font-size: 1.2rem;
+            left: 50%;
+            font-weight: bold;
+            @include rem((
+                padding: 3px 3px 0 3px,
+                top: -$gs-gutter/2
+            ));
+
+            @include mq(tablet) {
+                @include rem((
+                    top: -16px
+                ));
+            }
+
+            @include mq(desktop) {
+                @include rem((
+                    top: -18px
+                ));
+            }
+
+            @include mq(mem-full) {
+                @include rem((
+                    top: -$gs-gutter
+                ));
+            }
+        }
     }
 }
 
@@ -90,6 +123,7 @@ $header-margin: 36px;
         padding-top: 0,
         margin-right: 15px
     ));
+
     @include mq(tablet) {
         @include rem((
             padding-top: 8px
