--- a/frontend/assets/stylesheets/nav/_nav.scss
+++ b/frontend/assets/stylesheets/nav/_nav.scss
@@ -40,18 +40,11 @@
 .nav--global {
     clear: both;
     display: block;
-    width: 100%;
-    overflow: hidden;
-    overflow-x: scroll;
     @include fs-header(1);
     @include rem((
         padding: $gs-baseline/2 0,
         height: $gs-gutter*2+4
     ));
-
-    &::-webkit-scrollbar {
-        display: none;
-    }
 
     @include mq(tablet) {
         @include fs-header(2);
@@ -121,12 +114,18 @@
    ========================================================================== */
 
 .nav--global--header {
+    overflow: hidden;
+    overflow-x: scroll;
     background-color: darken($mem-blue, 10%);
     height: $header-margin;
     @include side-margins-calc('padding-left');
     @include side-margins-calc('padding-right');
     padding-top: 3px;
     padding-bottom: 0;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
 }
 
 .nav-global--mini {
@@ -151,45 +150,27 @@
    ========================================================================== */
 
 .nav--columns {
-    // @include rem((
-    //     padding: 0 $gs-gutter/2
-    // ));
-    @include mq(mobileLandscape) {
-        @include rem((
-            padding-left: $gs-gutter,
-            padding-right: $gs-gutter
-        ));
-    }
+
     > .nav__item {
-        float: left;
-        width: 50%;
         @include box-sizing(border-box);
-        border-right: 1px solid #6dcfe3;
+        width: 100%;
+        display: block;
 
         @include mq(tablet) {
-            border-right: 0;
-        }
-
-        &:nth-child(odd) {
-            clear: left;
-        }
-        &:nth-child(even) {
-            padding-right: 0;
             border-right: 0;
         }
     }
 
     .nav__link {
-        border-top: 1px solid #6dcfe3;
+        @include fs-bodyHeading(1);
+        border-top: 1px solid $mem-blue-border;
         display: block;
+        background-color: transparent;
+        -webkit-font-smoothing: subpixel-antialiased;
+        text-decoration: none;
         @include rem((
             padding: $gs-baseline/2 0 $gs-baseline $gs-baseline
         ));
-        height: auto;
-        background-color: transparent;
-        @include fs-header(1);
-        -webkit-font-smoothing: subpixel-antialiased;
-        text-decoration: none;
 
         @include mq(tablet) {
             border-top: 0;
@@ -223,7 +204,7 @@
     right: 0;
     background-color: lighten($black, 20%);
     z-index: 3;
-    top: 42px;
+    top: 43px;
 
     a.mobile-menu__button {
         color: $white;
@@ -236,10 +217,12 @@
     }
 
     .mobile-menu__button i {
-        width: 20px;
-        display: block;
         border-top: 2px solid rgba(255, 255, 255, .9);
-        margin-top: 3px;
+        display: block;
+        @include rem((
+            width: 20px,
+            margin-top: 3px
+        ));
         @include transform-origin(60%);
         -webkit-transition: opacity .1s, -webkit-transform .1s ease-in;
         transition: opacity .1s, transform .1s ease-in;
