Make friend cancellation asynchronous
This means that friend cancellation will follow the same process as paid
member cancellation, namely Zuora updates Salesforce which sends an
email.

Its nice to unify things!

--- a/frontend/app/views/tier/cancel/summary.scala.html
+++ b/frontend/app/views/tier/cancel/summary.scala.html
@@ -19,6 +19,10 @@
             </section>
         }
 
+        @if(subscriptionDetailsOpt.isEmpty) {
+            <p>Some copy here...</p>
+        }
+
         <p>Your Guardian profile will remain active so you can continue to participate in the Guardian community</p>
 
         <div class="content__container right-align">
