--- a/frontend/app/views/tier/cancel/summary.scala.html
+++ b/frontend/app/views/tier/cancel/summary.scala.html
@@ -20,7 +20,7 @@
         }
 
         @if(subscriptionDetailsOpt.isEmpty) {
-            <p>Some copy here...</p>
+            <p>We are processing your cancellation and will send a confirmation email shortly.</p>
         }
 
         <p>Your Guardian profile will remain active so you can continue to participate in the Guardian community</p>
