hide scroll to table on nav

--- a/frontend/assets/stylesheets/nav/_nav.scss
+++ b/frontend/assets/stylesheets/nav/_nav.scss
@@ -126,6 +126,10 @@
     &::-webkit-scrollbar {
         display: none;
     }
+
+    @include mq(tablet) {
+        overflow-x: hidden;
+    }
 }
 
 .nav-global--mini {
