Aligning nav for mobiles

--- a/frontend/assets/stylesheets/_ie9.scss
+++ b/frontend/assets/stylesheets/_ie9.scss
@@ -4,6 +4,10 @@
     @include side-margins-calc('padding-right');
 }
 
+.icon-wrapper {
+    display: inline;
+}
+
 .events-list .events-list__item {
     margin: 0 0 $gs-gutter 0 !important;
 }
