fix momentun scrolling

--- a/frontend/app/views/fragments/header.scala.html
+++ b/frontend/app/views/fragments/header.scala.html
@@ -93,7 +93,7 @@
                 </div>
             </div>
         </div>
-        <nav role="navigation" class="nav nav--global nav--global--header">
+        <nav role="navigation" class="nav nav--global nav--global--header touch">
             <div class="header__primary navigation__scroll">
                 <ul class="inline-list">
                     @fragments.nav(inlineMode=true)
