--- a/frontend/assets/stylesheets/pages/_joiner.scss
+++ b/frontend/assets/stylesheets/pages/_joiner.scss
@@ -209,3 +209,8 @@ $card-icon-offset: 2px;
         float: left;
     }
 }
+
+.complete-purchase {
+    margin-bottom: $gutter*2;
+    margin-top: $gutter;
+}
