--- a/frontend/app/views/joiner/thankyou/friend.scala.html
+++ b/frontend/app/views/joiner/thankyou/friend.scala.html
@@ -8,9 +8,19 @@
         @fragments.layout.welcomeUser()
     </section>
 
-    <a class="action action--join" href="/events">Get Started</a>
+    @if(ebIFrameDetail) {
+        <section class="complete-purchase">
+            <h2>Complete your discounted ticket purchase</h2>
+            <h3>Please bear with us</h3>
 
-    @for((eventIFrameUrl, eventIFrameTicketQty) <- ebIFrameDetail) {
-        @fragments.form.eventBriteIFrame(eventIFrameUrl, eventIFrameTicketQty)
+            <p>We're currently improving our ticket purchasing system but in the meantime you will have to enter some details again.</p>
+            <p>We'll have a much smoother solution soon.</p>
+        </section>
+
+        @for((eventIFrameUrl, eventIFrameTicketQty) <- ebIFrameDetail) {
+            @fragments.form.eventBriteIFrame(eventIFrameUrl, eventIFrameTicketQty)
+        }
+    } else {
+        <a class="action action--join" href="/events">Get Started</a>
     }
 }
