Add h1 to thankyou page

--- a/frontend/app/views/joiner/thankyou/friend.scala.html
+++ b/frontend/app/views/joiner/thankyou/friend.scala.html
@@ -4,7 +4,7 @@
 
     <section class="joiner-section joiner-section--left-aligned joiner-section--no-border">
         @fragments.tickets.ticketsFunnel(4, StepOne = "", StepTwo = "", StepThree = "")
-        @fragments.form.sectionHeading("Hello! Welcome to Guardian Membership")
+        <h1 class="section-sub-headline">Hello! Welcome to Guardian Membership</h1>
         @fragments.layout.welcomeUser()
     </section>
 
