Change edit profile link depending on membership

--- a/frontend/app/views/fragments/header.scala.html
+++ b/frontend/app/views/fragments/header.scala.html
@@ -60,7 +60,7 @@
                                 <a href="@Config.idWebAppUrl/user/id/" class="nav__link js-comment-activity">Comment activity</a>
                             </li>
                             <li class="nav__item">
-                                <a href="@Config.idWebAppUrl/membership/edit" class="nav__link">Edit profile</a>
+                                <a href="@Config.idWebAppUrl/public/edit" data-member-href="@Config.idWebAppUrl/membership/edit" class="nav__link js-edit-profile">Edit profile</a>
                             </li>
                             <li class="nav__item">
                                 <a href="@Config.idWebAppUrl/email-prefs" class="nav__link">Email preferences</a>
