Update title for signin page

--- a/frontend/app/views/login/signin.scala.html
+++ b/frontend/app/views/login/signin.scala.html
@@ -4,7 +4,7 @@
 @import configuration.Config
 @import model.Benefits
 
-@main("Join membership") {
+@main("Sign in/Register") {
 
     <section class="section-signin">
 
