Add required markers to feedback form

--- a/frontend/app/views/fragments/form/feedback.scala.html
+++ b/frontend/app/views/fragments/form/feedback.scala.html
@@ -8,7 +8,7 @@
     <div class="fieldset__fields">
 
         <div class="form-field">
-            <label class="label" for="category">I have feedback about</label>
+            <label class="label required-marker" for="category">I have feedback about</label>
             <div class="input">
                 <select name="category" id="category" data-validation="required" data-error-message="Please select a
                 feedback category">
@@ -26,7 +26,7 @@
         </div>
 
         <div class="form-field">
-            <label class="label" for="feedback">Comments</label>
+            <label class="label required-marker" for="feedback">Comments</label>
             <textarea name="feedback" id="feedback" class="textarea--long textarea"
                       data-error-message="Please enter your comment"
                       data-validation="required"></textarea>
@@ -45,13 +45,13 @@
     <div class="fieldset__fields">
 
         <div class="form-field">
-            <label class="label" for="name">Name</label>
+            <label class="label required-marker" for="name">Name</label>
             <input name="name" id="name" class="text-input text-input-block" type="text" data-validation="required"
                    data-error-message="Please enter your name"/>
         </div>
 
         <div class="form-field">
-            <label class="label" for="email">Email address</label>
+            <label class="label required-marker" for="email">Email address</label>
             <input name="email" id="email" class="text-input text-input-block" type="email"
                    data-validation="required"
                    data-error-message="Please enter your email address"/>
