Change copy referring to package on benefits fragment

--- a/frontend/app/views/fragments/tier/benefits.scala.html
+++ b/frontend/app/views/fragments/tier/benefits.scala.html
@@ -27,7 +27,7 @@
                         Can we still be Friends?
                     }
                     @if(mode == "") {
-                        Your Current Package
+                        Your tier
                     }
                 </div>
             }
