--- a/frontend/app/views/tier/change.scala.html
+++ b/frontend/app/views/tier/change.scala.html
@@ -9,8 +9,8 @@
     <main role="main">
         <div class="content__container">
             <section class="content__section">
-                <h1 class="content__headline">Change your tier</h1>
                 <a href="@Config.idWebAppUrl/membership/edit" class="action action--arrow-left action-cta--confirm">Edit profile</a>
+                <h1 class="content__headline">Change tier</h1>
             </section>
         </div>
         <div class="package-container">
