Change remaining references to "package"

--- a/frontend/app/views/tier/downgrade/summary.scala.html
+++ b/frontend/app/views/tier/downgrade/summary.scala.html
@@ -19,7 +19,7 @@
         <div class="content__container content__container--border">
             <section class="l-row l-row--items-2">
                 <div class="l-row__item">
-                    <h2>Current Package Summary</h2>
+                    <h2>Current Membership Summary</h2>
                 </div>
                 <div class="l-row__item l-row__item--boost-2 secondary-content">
                     @fragments.tier.summary(currentSubscription)
@@ -29,7 +29,7 @@
         <div class="content__container content__container--border">
             <section class="l-row l-row--items-2">
                 <div class="l-row__item">
-                    <h2>New Package Summary</h2>
+                    <h2>New Membership Summary</h2>
                 </div>
                 <div class="l-row__item l-row__item--boost-2 secondary-content">
                     <table class="table table--responsive-font table--striped">
