--- a/frontend/app/views/tier/cancel/summary.scala.html
+++ b/frontend/app/views/tier/cancel/summary.scala.html
@@ -12,7 +12,7 @@
         @for(subscriptionDetails <- subscriptionDetailsOpt) {
             <p>You will continue to receive all the great Membership benefits until @subscriptionDetails.endDate.pretty</p>
 
-            <h2 class="section-sub-headline">Current Package Summary</h2>
+            <h2 class="section-sub-headline">Current Membership Summary</h2>
 
             <section class="joiner-section joiner-section--no-border">
                 @fragments.tier.summary(subscriptionDetails)
