--- a/frontend/app/views/tier/downgrade/summary.scala.html
+++ b/frontend/app/views/tier/downgrade/summary.scala.html
@@ -7,13 +7,10 @@
 @main("Downgrade Tier Summary") {
 
     <main role="main">
-        <div class="content__container content__container--border">
-            <section class="l-row l-row--items-2 content__section">
-                <div class="l-row__item"></div>
-                <article class="l-row__item l-row__item--boost-2 secondary-content">
-                    <h1 class="content__headline">Sorry to see you go...</h1>
-                    <p>You will continue to receive all the great Membership benefits until @currentSubscription.endDate.pretty</p>
-                </article>
+        <div class="content__container">
+            <section>
+                @fragments.layout.sectionHeader("Sorry to see you go&hellip;")
+                <p>You will continue to receive all the great Membership benefits until @currentSubscription.endDate.pretty</p>
             </section>
         </div>
         <div class="content__container content__container--border">
