Copy footer brand bar from frontend

--- a/frontend/app/views/fragments/footer.scala.html
+++ b/frontend/app/views/fragments/footer.scala.html
@@ -1,6 +1,24 @@
 @import org.joda.time.DateTime
 @import configuration.Config
 <footer class="l-footer u-cf" data-link-name="footer" data-component="footer">
+    <div class="l-footer__primary">
+        <div id="footer-nav" class="gs-container">
+            <div class="brand-bar u-cf">
+                <a href="http://www.theguardian.com/" data-link-name="site logo" class="guardian-logo-footer hide-on-mobile">
+                    <span class="u-h">The Guardian</span>
+                    <i class="i icon-sprite-guardian-logo"></i>
+                </a>
+                <a class="brand-bar__item brand-bar__item--action" data-link-name="back to top" href="#top">
+                    <span class="control__icon-wrapper">
+                        <span class="control__icon">
+                            <i class="i icon-sprite-arrow-up-white"></i>
+                        </span>
+                    </span>
+                    <span class="control__info">Back to top</span>
+                </a>
+            </div>
+        </div>
+    </div>
     <div class="l-footer__secondary gs-container" role="contentinfo">
         <ul class="colophon u-cf">
             <li class="colophon__item"><a data-link-name="help" href="/help">Help</a></li>
