--- a/frontend/assets/stylesheets/nav/_control.scss
+++ b/frontend/assets/stylesheets/nav/_control.scss
@@ -73,6 +73,14 @@
 /* Active control icon
    ========================================================================== */
 
+.control__icon-wrapper {
+    @extend %icon-holder-circle;
+    border: 1px solid rgba(#ffffff, .3);
+    float: left;
+    height: 34px;
+    width: 34px;
+}
+
 .control__icon {
     display: block;
     text-align: center;
