--- a/frontend/assets/stylesheets/layout/_footer.scss
+++ b/frontend/assets/stylesheets/layout/_footer.scss
@@ -21,6 +21,15 @@ footer {
     }
 }
 
+/* Elements modifiers specific to the footer
+   ========================================================================== */
+
+.guardian-logo-footer {
+    margin-top: $gs-baseline * .75;
+    float: right;
+    line-height: 0;
+}
+
 /* Footer
    ========================================================================== */
 
@@ -32,6 +41,31 @@ footer {
 
     .hide-in-footer {
         display: none !important;
+    }
+
+    .gs-container {
+        @include box-sizing(border-box);
+
+        @include mq(desktop) {
+            @include rem((
+                width: gs-span(12)+$gs-gutter*2
+            ));
+        }
+
+        @include mq(mem-full) {
+            @include rem((
+                width: gs-span(14)+$gs-gutter*2
+            ));
+        }
+    }
+
+    .control__info {
+        color: #ffffff;
+        display: inline-block;
+
+        @include rem((
+            padding-left: $gs-gutter/2
+        ));
     }
 }
 
@@ -52,8 +86,13 @@ footer {
     }
 }
 
+.l-footer__primary {
+    position: relative;
+    overflow: hidden;
+    background-color: darken($mem-blue, 10%);
+}
+
 .l-footer__secondary {
-    @include box-sizing(border-box);
     @include font($sans-serif, normal, 13, 19);
     color: lighten($c-neutral2, 15%);
     @include rem((
@@ -69,18 +108,6 @@ footer {
     @include mq(tablet) {
         @include rem((
             padding-top: ($gs-baseline/3)*2
-        ));
-    }
-
-    @include mq(desktop) {
-        @include rem((
-            width: gs-span(12)+$gs-gutter*2
-        ));
-    }
-
-    @include mq(mem-full) {
-        @include rem((
-            width: gs-span(14)+$gs-gutter*2
         ));
     }
 
