Transform footer content to lowercase

--- a/frontend/app/views/fragments/footer.scala.html
+++ b/frontend/app/views/fragments/footer.scala.html
@@ -14,13 +14,13 @@
                             <i class="i icon-sprite-arrow-up-white"></i>
                         </span>
                     </span>
-                    <span class="control__info">Back to top</span>
+                    <span class="control__info case--lower">Back to top</span>
                 </a>
             </div>
         </div>
     </div>
     <div class="l-footer__secondary gs-container" role="contentinfo">
-        <ul class="colophon u-cf">
+        <ul class="colophon u-cf case--lower">
             <li class="colophon__item"><a data-link-name="help" href="/help">Help</a></li>
             <li class="colophon__item"><a data-link-name="contact" href="http://www.theguardian.com/help/contact-us">Contact us</a></li>
             <li class="colophon__item"><a data-link-name="feedback" href="/feedback">Feedback</a></li>
