--- a/frontend/assets/stylesheets/layout/_footer.scss
+++ b/frontend/assets/stylesheets/layout/_footer.scss
@@ -37,7 +37,8 @@ footer {
     @include rem((
         padding: 0 0 ($gs-baseline/3)*4
     ));
-    background: $c-neutral8;
+    background: $c-neutral6;
+    z-index: 1; // Above side margins
 
     .hide-in-footer {
         display: none !important;
@@ -89,7 +90,7 @@ footer {
 .l-footer__primary {
     position: relative;
     overflow: hidden;
-    background-color: darken($mem-blue, 10%);
+    background-color: darken($mem-blue, 12%);
 }
 
 .l-footer__secondary {
