--- a/frontend/app/views/fragments/footer.scala.html
+++ b/frontend/app/views/fragments/footer.scala.html
@@ -4,9 +4,9 @@
     <div class="l-footer__primary">
         <div id="footer-nav" class="gs-container">
             <div class="brand-bar u-cf">
-                <a href="http://www.theguardian.com/" data-link-name="site logo" class="guardian-logo-footer hide-on-mobile">
-                    <span class="u-h">The Guardian</span>
-                    <i class="i icon-sprite-guardian-logo"></i>
+                <a href="/" data-link-name="site logo" class="guardian-logo-footer hidden-mobile">
+                    <span class="u-h">@Config.siteTitle</span>
+                    <i class="icon-sprite icon-sprite-membership_beta_mobile"></i>
                 </a>
                 <a class="brand-bar__item brand-bar__item--action" data-link-name="back to top" href="#top">
                     <span class="control__icon-wrapper">
