Update footer to match NGW styles

--- a/frontend/app/views/fragments/footer.scala.html
+++ b/frontend/app/views/fragments/footer.scala.html
@@ -9,7 +9,7 @@
                     <i class="icon-sprite icon-sprite-membership_beta_mobile"></i>
                 </a>
                 <a class="brand-bar__item brand-bar__item--action" data-link-name="back to top" href="#top">
-                    <span class="control__icon-wrapper">
+                    <span class="control">
                         <span class="control__icon">
                             <i class="i icon-sprite-arrow-up-black"></i>
                         </span>
